removed tithis string

--- a/views/index.html
+++ b/views/index.html
@@ -337,7 +337,7 @@
     <div class="info-block-2">
       <div class="white-text">
         <div class="month-name" >
-            <marquee id="thithis-info">tithis</marquee>
+            <marquee id="thithis-info"></marquee>
         </div>
       </div>
     </div>
